# Circuit-Code

./: .gitignore  CODEBASE_SUMMARY.md  Circuit_Chat_Test.py  PLAN_V3.md  README.md  SETUP.md  circuit-ide.command  circuit_agent.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
circuit_agent/: __init__.py  agent.py  cli.py  config.py  context.py  errors.py  security.py  streaming.py  tools.py  ui.py
circuit_agent/mcp/: __init__.py  client.py  config.py  converter.py  transport.py
circuit_agent/mcp/servers/: github.py
circuit_agent/memory/: __init__.py  compaction.py  session.py
circuit_agent/service/: __init__.py  agent_service.py  events.py  state.py
circuit_agent/tools/: __init__.py  executor.py  file_tools.py  git_tools.py  github_tools.py  web_tools.py
circuit_ide/: __init__.py  __main__.py  app.py  config.py
circuit_ide/screens/: __init__.py  main.py
circuit_ide/styles/: circuit.tcss
circuit_ide/styles/themes/: dark.tcss
circuit_ide/utils/: __init__.py  keybindings.py
circuit_ide/widgets/: __init__.py  chat.py  editor.py  file_tree.py  status.py  terminal.py
circuit_ide_gui/: __init__.py  __main__.py  main.py
docs/: CIRCUIT_API_Basic_User_Guide.md  CODEBASE_REVIEW.md  CODEBASE_SUMMARY.md  IMPLEMENTATION_PLAN_V9.md  IMPROVEMENT_PLAN.md  INSPECTION_REPORT.md  PLAN_V4.md  PLAN_V5.md  integrated-agent-ide-plan.md
tests/: Circuit_Chat_Test.py  __init__.py  calculator.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_agent.py  test_config.py  test_service.py
tests/unit/test_tools/: __init__.py  test_file_tools.py  test_git_tools.py
