[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit-agent"
version = "5.0.0-alpha"
description = "AI-powered coding assistant for Cisco Circuit with Terminal IDE"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Circuit Agent Team"}
]
keywords = ["ai", "coding-assistant", "cli", "ide", "circuit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "httpx>=0.25.0",
    "pygments>=2.17.0",
    "certifi>=2023.0.0",  # SSL CA bundle
]

[project.optional-dependencies]
tui = [
    "textual>=0.47.0",
    "rich>=13.0.0",
]
gui = [
    "PySide6>=6.6.0",
]
secure = [
    "keyring>=24.0.0",  # Secure credential storage
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "textual-dev>=1.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",  # Security scanner
    "safety>=2.3.0",  # Dependency vulnerability scanner
]
all = [
    "circuit-agent[tui,gui,secure]",
]

[project.scripts]
circuit-agent = "circuit_agent.cli:main"
circuit-ide = "circuit_ide_gui.main:main"
circuit-ide-tui = "circuit_ide.__main__:main"

[project.urls]
Homepage = "https://github.com/Circuit-Agent/circuit-code"
Repository = "https://github.com/Circuit-Agent/circuit-code"

[tool.setuptools.packages.find]
include = ["circuit_agent*", "circuit_ide*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_network: marks tests that require network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["circuit_agent", "circuit_ide", "circuit_ide_gui"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 50

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert warnings in tests
